--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -55,7 +55,7 @@ services:
     environment:
       NODE_ENV: development
 
-  front:
+  front-pcs:
     privileged: true
     build:
       context: ./front-pcs/
@@ -67,13 +67,13 @@ services:
     # env_file:
     # - ./front-pcs/.env
 
-  # rabbitmq:
-  #   privileged: true
-  #   image: "rabbitmq:3.8.32-management"
-  #   environment:
-  #     RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_management sample_retention_policies [{global,[{3600,1}]},{basic,[{3600,1}]},{detailed,[{10,1}]}]"
-  #   ports:
-  #     - "5672:5672"
-  #     - "25672:15672"
-  #   volumes:
-  #     - ./docker/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
+  rabbitmq:
+    privileged: true
+    image: "rabbitmq:3.8.32-management"
+    environment:
+      RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_management sample_retention_policies [{global,[{3600,1}]},{basic,[{3600,1}]},{detailed,[{10,1}]}]"
+    ports:
+      - "5672:5672"
+      - "25672:15672"
+    volumes:
+      - ./docker/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
