--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,9 +22,9 @@ services:
       POSTGRES_PASSWORD: "pcs"
     ports:
       - "5432:5432"
-    # volumes:
-      # - ./docker/postgres/data:/var/lib/postgresql/data
-      # - ./docker/postgres/sql:/docker-entrypoint-initdb.d
+    volumes:
+      - ./docker/postgres/data:/var/lib/postgresql/data
+      - ./docker/postgres/init-db:/docker-entrypoint-initdb.d
 
   api-pcs:
     privileged: true
