--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -71,7 +71,7 @@ server {
 	location / {
 		# resolver 127.0.0.11 ipv6=off;
 
-		proxy_pass          http://front;
+		proxy_pass          http://front-pcs;
 		proxy_set_header    Host $host;
 		proxy_set_header    X-Forwarded-For $remote_addr;
 		proxy_read_timeout  90;
