--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,6 +3,7 @@ map $http_host $port {
 
 	default unknown;
 
+	pcs.fr          3001;
 	api.pcs.fr     	3000;
 	*.pcs.fr        3001;
 }
@@ -52,7 +53,7 @@ server {
 	ssl_certificate     /etc/nginx/ssl/dev-chain-certificate.pem;
 	ssl_certificate_key /etc/nginx/ssl/dev-tls-private-key.pem;
 
-	server_name pcs.fr admin.pcs.fr bailleur.pcs.fr prestataire.pcs.fr voyageur.dev.fr
+	server_name admin.pcs.fr pcs.fr bailleur.pcs.fr prestataire.pcs.fr voyageur.pcs.fr
 	index       index.html index.htm index.php;
 
 	root /var/www/pcs/;
