--- a/api-pcs/Dockerfile.dev
+++ b/api-pcs/Dockerfile.dev
@@ -8,8 +8,9 @@ WORKDIR /usr/lib/esgi/api-pcs/
 COPY package.json .
 
 RUN npm install
-# RUN npx prisma migrate dev
 
 # Exports
 EXPOSE 80
-CMD [ "npm", "run", "start:dev" ]
+
+# Run container
+CMD npx run start:dev & npx prisma studio
