--- a/api-pcs/package.json
+++ b/api-pcs/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "prisma:db:pull": "prisma db pull",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -25,7 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "@prisma/client": "^4.7.1",
+    "@prisma/client": "^5.14.0",
     "@types/amqplib": "^0.10.1",
     "@types/uuid": "^9.0.0",
     "amqplib": "^0.10.3",
@@ -36,7 +37,7 @@
     "js-yaml": "^4.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "prisma": "^4.7.1",
+    "prisma": "^5.14.0",
     "prom-client": "^14.2.0",
     "rxjs": "^7.8.0",
     "type-check": "^0.4.0"
