--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,6 +4,7 @@ map $http_host $port {
 	default unknown;
 
 	pcs.fr          3001;
+	db.pcs.fr     	5555;
 	api.pcs.fr     	3000;
 	*.pcs.fr        3001;
 }
@@ -13,6 +14,27 @@ server {
 	listen [::]:80 default_server;
 	server_name _;
 	return 301 https://$host$request_uri;
+}
+
+server {
+	listen      *:443 ssl;
+
+	ssl_certificate     /etc/nginx/ssl/dev-chain-certificate.pem;
+	ssl_certificate_key /etc/nginx/ssl/dev-tls-private-key.pem;
+
+	server_name db.pcs.fr;
+
+	access_log  /dev/stdout;
+	error_log   stderr;
+
+	location / {
+		# resolver 127.0.0.11 ipv6=off;
+
+		proxy_pass          http://api-pcs:5555;
+		proxy_set_header    Host $host;
+		proxy_set_header    X-Forwarded-For $remote_addr;
+		proxy_read_timeout  90;
+	}
 }
 
 server {
