--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -61,6 +61,8 @@ server {
 
 	location / {
 		# resolver 127.0.0.11 ipv6=off;
+    	# add_header 'Access-Control-Allow-Credentials' 'true' always;
+    	# add_header 'Access-Control-Allow-Origin' 'https://admin.pcs.fr' always;
 
 		proxy_pass          http://api-pcs;
 		proxy_set_header    Host $host;
