--- a/api-pcs/Dockerfile.dev
+++ b/api-pcs/Dockerfile.dev
@@ -8,9 +8,14 @@ WORKDIR /usr/lib/esgi/api-pcs/
 COPY package.json .
 
 RUN npm install
+# RUN apt update 
+# RUN apt -y install systemd
+# RUN apt -y install cron
 
 # Exports
 EXPOSE 80
 
 # Run container
 CMD npm run start:dev & npx prisma studio
+# CMD ["/lib/systemd/systemd", "&", "npm", "run", "start:dev"]
+# CMD ["bash", "-c", "/lib/systemd/systemd & npm run start:dev"]
