--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -93,9 +93,16 @@ server {
 		return 400;
 	}
 
+	location /ws {
+		proxy_pass http://front-pcs;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_read_timeout 90;
+	}
+
 	location / {
 		# resolver 127.0.0.11 ipv6=off;
-
 		proxy_pass          http://front-pcs;
 		proxy_set_header    Host $host;
 		proxy_set_header    X-Forwarded-For $remote_addr;
