--- a/front-pcs/package.json
+++ b/front-pcs/package.json
@@ -29,8 +29,11 @@
     "@stripe/stripe-js": "^1.17.1",
     "axios": "^0.21.4",
     "config": "^3.3.6",
+    "i18next": "^23.11.5",
+    "i18next-http-backend": "^2.5.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-i18next": "^14.1.1",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "rxjs": "^7.8.0",
