--- a/front-pcs/package.json
+++ b/front-pcs/package.json
@@ -30,6 +30,7 @@
     "axios": "^0.21.4",
     "config": "^3.3.6",
     "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
