--- a/api-pcs/package.json
+++ b/api-pcs/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "prisma:db:pull": "prisma db pull",
+    "prisma:db:push": "prisma db push",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
