--- a/front-pcs/package.json
+++ b/front-pcs/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^5.0.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.1.15",
@@ -37,8 +38,7 @@
     "react-i18next": "^14.1.1",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
-    "rxjs": "^7.8.0",
-    "swiper": "^8.4.7"
+    "rxjs": "^7.8.0"
   },
   "browserslist": {
     "production": [
