--- a/api-pcs/package.json
+++ b/api-pcs/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "html-pdf": "^3.0.1",
     "js-yaml": "^4.1.0",
     "node-cron": "^3.0.3",
     "passport": "^0.6.0",
