--- a/docker/api-pcs/config/development.yaml
+++ b/docker/api-pcs/config/development.yaml
@@ -14,6 +14,11 @@ jwt_secret: 'MY_SECRET'
 payment:
   host: 'http://api-stripe'
 
+# Facturation
+cron:
+  facturation:
+    prestataires: '0 0 0 1 * *'
+
 # Database
 databases:
   postgres:
