--- a/api-pcs/package.json
+++ b/api-pcs/package.json
@@ -35,9 +35,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "cron": "^3.1.7",
     "html-pdf": "^3.0.1",
     "js-yaml": "^4.1.0",
-    "node-cron": "^3.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "prisma": "^5.14.0",
