--- a/api-pcs/package.json
+++ b/api-pcs/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.14.0",
     "@types/amqplib": "^0.10.1",
     "@types/uuid": "^9.0.0",
@@ -43,6 +44,7 @@
     "prisma": "^5.14.0",
     "prom-client": "^14.2.0",
     "rxjs": "^7.8.0",
+    "swagger-ui-express": "^5.0.1",
     "type-check": "^0.4.0"
   },
   "devDependencies": {
