--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,9 +32,9 @@ services:
       context: ./api-pcs/
       dockerfile: Dockerfile.dev
     volumes:
-      - ./api-pcs:/usr/lib/esgi/api-pcs
-      - ./docker/api-pcs/config:/usr/lib/esgi/api-pcs/config
-      - ./docker/api-pcs/public:/usr/lib/esgi/api-pcs/public
+      - ./api-pcs:/usr/lib/pcs/api-pcs
+      - ./docker/api-pcs/config:/usr/lib/pcs/api-pcs/config
+      - ./docker/api-pcs/public:/usr/lib/pcs/api-pcs/public
     ports:
       - "3000:80"
     environment:
@@ -49,8 +49,8 @@ services:
       context: ./api-stripe/
       dockerfile: Dockerfile.dev
     volumes:
-      - ./api-stripe:/usr/lib/esgi/api-stripe
-      - ./docker/api-stripe/config:/usr/lib/esgi/api-stripe/config
+      - ./api-stripe:/usr/lib/pcs/api-stripe
+      - ./docker/api-stripe/config:/usr/lib/pcs/api-stripe/config
     ports:
       - "3002:80"
     environment:
@@ -62,7 +62,7 @@ services:
       context: ./front-pcs/
       dockerfile: Dockerfile.dev
     volumes:
-      - ./front-pcs:/usr/lib/esgi/front-pcs
+      - ./front-pcs:/usr/lib/pcs/front-pcs
     ports:
       - "3003:80"
     # env_file:
