--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -10,8 +10,8 @@ services:
       - "${NGINX_PORT:-443}:443"
     volumes:
       - ./docker/nginx:/etc/nginx/conf.d
-      - ./front-pcs/src/public:/var/www/pcs/public
       - ./docker/nginx/SSL/certs/rsa:/etc/nginx/ssl
+      # - ./front-pcs/src/public:/var/www/pcs/public
 
   postgresql:
     privileged: true
@@ -27,7 +27,7 @@ services:
       - ./docker/postgres/init-db:/docker-entrypoint-initdb.d
 
   api-pcs:
-    image: docker.io/celenaaa/api-pcs:2.3.0
+    image: docker.io/celenaaa/api-pcs:2.4.0
     restart: always
     volumes:
       - ./docker/api-pcs/config:/usr/lib/pcs/api-pcs/config
@@ -35,20 +35,20 @@ services:
     ports:
       - "3000:80"
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       DATABASE_URL: 'postgresql://pcs:pcs@postgresql:5432/pcs?schema=public'
     # env_file:
     # - ./docker/nest/config/development.yaml
 
   api-stripe:
-    image: docker.io/celenaaa/api-stripe:1.1.0
+    image: docker.io/celenaaa/api-stripe:1.2.0
     restart: always
     volumes:
       - ./docker/api-stripe/config:/usr/lib/pcs/api-stripe/config
     ports:
       - "3002:80"
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
 
   front-pcs:
     image: docker.io/celenaaa/front-pcs:1.2.0
