--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -51,11 +51,11 @@ services:
       NODE_ENV: production
 
   front-pcs:
-    image: docker.io/celenaaa/front-pcs:1.5.0
+    image: docker.io/celenaaa/front-pcs:2.1.0
     restart: always
     volumes:
       - ./docker/front-pcs/production.js:/usr/lib/pcs/front-pcs/public/env.js
     ports:
       - "3003:80"
-    # env_file:
-    # - ./front-pcs/.env
+    environment:
+      NODE_ENV: production
