--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ docker/public/images/*
 docker/public/factures/*
 docker/public/receipts/*
 
+!/public/images/
+!/public/factures/
+!/public/receipts/
