--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -85,9 +85,9 @@ server {
 	access_log  /dev/stdout;
 	error_log   stderr;
 
-    # location /public/ {
-	# 	root /var/www/pcs/;
-    # }
+    location /public/ {
+		root /var/www/pcs/;
+    }
 
 	if ($port = unknown) {
 		return 400;
