--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -10,8 +10,8 @@ services:
       - "${NGINX_PORT:-443}:443"
     volumes:
       - ./docker/nginx:/etc/nginx/conf.d
-      # - ./front-pcs/src/public:/var/www/pcs/public
       - ./docker/nginx/SSL/certs/rsa:/etc/nginx/ssl
+      - ./docker/api-pcs/public:/var/www/pcs/public
       - ./docker/front-pcs/development.js:/var/www/pcs/public/env.js
 
   postgresql:
