--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -46,6 +46,7 @@ server {
 	server_name api.pcs.fr;
 	index       index.html index.htm index.php;
 
+	client_max_body_size 30M;
 	root /var/www/pcs/;
 
 	access_log  /dev/stdout;
